test/check/missing_output_errors.expected
File "missing_output.mim", line 1, characters 20-21
1 | step test a --> (b, c)
                        ^
Error: No equation found for output symbol c